2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add JAD MIME type. Fixes #10869.
	Thanks to Ville Skyttä <ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add WMLScript MIME type. Fixes #10868.
	Thanks to Ville Skyttä <ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add winmail.dat glob to TNEF MIME type. Fixes
	#10867. Thanks to Ville Skyttä <ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Fix PostScript and XHTML acronyms. Fixes
	#10865. Thanks to Ville Skyttä <ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* configure.in: Require glib 2.3.2. Fixes #10398. Thanks to Martin
	Koller <m.koller@surfeu.at>, and Harri Porten <porten@kde.org>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* update-mime-database.c: Improve windows compatibility, close streams.
	Fixes #10689. Thanks to Christian Ehrlicher <ch.ehrlicher@gmx.de>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add Plucker MIME type. Fixes #10379. Thanks
	to Pino Toscano <toscano.pino@tiscali.it>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Also match uppercase "F" for fortran
	globs, fixes #10692. Thanks to Quintin Hill <quintinhill@gmx.net>

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Change top-level tag matching offset range
	of XML subtypes from "0:64" to "0:256". Fixes #10880. Thanks to
	Sebastian Dröge <slomo@circular-chaos.org>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add Erlang source code MIME type, fixes
	#10878. Thanks to Martin Ankerl <martin.ankerl@gmail.com>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add ".hxx" glob pattern for C++ header.