@@ -1,5 +1,10 @@
 2007-06-27  Christian Neumair  <cneumair@gnome.org>
 
+	* update-mime-database.c: Use g_warning instead of g_error. Fixes
+	#10959. Thanks to Sebastien Bacher <seb128@debian.org>.
+
+2007-06-27  Christian Neumair  <cneumair@gnome.org>
+
 	* freedesktop.org.xml.in: Add JAD MIME type. Fixes #10869.
 	Thanks to Ville Skyttä <ville.skytta@iki.fi>.
 
